--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Tools - Handy online tools for developers</title>
-    <meta itemprop="name" content="IT Tools - Handy online tools for developers" />
+    <title>Best IT Tools - More than 100 online coding tools for developers and IT managers</title>
+    <meta itemprop="name" content="Best IT Tools - More than 100 online tools for developers and IT managers" />
     <meta
       name="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Best IT Tools - Discover a comprehensive collection of over 100 online coding and IT tools tailored for developers and IT professionals. From code formatting to system diagnostics, Best IT Tools offers a free and open-source platform to streamline your workflow. Perfect for developers, IT managers, and tech enthusiasts, this all-in-one toolkit empowers you to access essential tools right from your browser, enhancing productivity and efficiency."
     />
     <meta
       itemprop="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Best IT Tools - Discover a comprehensive collection of over 100 online coding and IT tools tailored for developers and IT professionals. From code formatting to system diagnostics, Best IT Tools offers a free and open-source platform to streamline your workflow. Perfect for developers, IT managers, and tech enthusiasts, this all-in-one toolkit empowers you to access essential tools right from your browser, enhancing productivity and efficiency."
     />
-    <link rel="author" href="humans.txt" />
-    <link rel="canonical" href="https://it-tools.tech" />
-
+    
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -24,25 +22,25 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta property="og:url" content="https://it-tools.tech/" />
+    <meta property="og:url" content="https://bestittools.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="IT Tools - Handy online tools for developers" />
+    <meta property="og:title" content="Best IT Tools - More than 100 online tools for developers and IT managers" />
     <meta
       property="og:description"
       content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
-    <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
+    <meta property="og:image" content="https://bestittools.com/banner.png?v=2" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ittoolsdottech" />
-    <meta name="twitter:creator" content="@cthmsst" />
+    <meta name="twitter:site" content="#" />
+    <meta name="twitter:creator" content="#" />
 
-    <meta name="twitter:title" content="IT Tools - Handy online tools for developers" />
+    <meta name="twitter:title" content="Best IT Tools - More than 100 online tools for developers and IT managers" />
     <meta
       name="twitter:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Best IT Tools - More than 100 online coding tools for developers and IT managers."
     />
-    <meta name="twitter:image" content="https://it-tools.tech/banner.png?v=2" />
+    <meta name="twitter:image" content="https://bestittools.com/banner.png?v=2" />
     <meta name="twitter:image:alt" content="IT Tools - Handy online tools for developers" />
   </head>
   <body>
